RESOLVED FIXED270038
Further fix the USE(APPLE_INTERNAL_SDK) && !HAVE(COREGRAPHICS_WITH_PDF_AREA_OF_INTEREST_SUPPORT) build
https://bugs.webkit.org/show_bug.cgi?id=270038
Summary Further fix the USE(APPLE_INTERNAL_SDK) && !HAVE(COREGRAPHICS_WITH_PDF_AREA_O...
Tim Horton
Reported 2024-02-24 09:22:53 PST
Further fix the USE(APPLE_INTERNAL_SDK) && !HAVE(COREGRAPHICS_WITH_PDF_AREA_OF_INTEREST_SUPPORT) build
Attachments
Tim Horton
Comment 1 2024-02-24 09:24:53 PST
EWS
Comment 2 2024-02-24 09:36:33 PST
Committed 275284@main (942323290b00): <https://commits.webkit.org/275284@main> Reviewed commits have been landed. Closing PR #25061 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-24 09:37:14 PST
Note You need to log in before you can comment on or make changes to this bug.