Further fix the USE(APPLE_INTERNAL_SDK) && !HAVE(COREGRAPHICS_WITH_PDF_AREA_OF_INTEREST_SUPPORT) build https://bugs.webkit.org/show_bug.cgi?id=270038

Unreviewed speculative additional build fix.

* Source/WebKit/Platform/spi/Cocoa/PDFKitSPI.h:

Canonical link: https://commits.webkit.org/275284@main